--- a/kalola-mobile23/app.json
+++ b/kalola-mobile23/app.json
@@ -1,7 +1,7 @@
 {
   "expo": {
-    "name": "Kalola-mobile",
-    "slug": "Kalola-mobile",
+    "name": "kalola-mobile",
+    "slug": "kalola-mobile",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
